@@ -112,6 +112,8 @@ Boost V1.34.0
   gives best results when both are defined.
 - Fixed a memory corruption bug triggered by a possible dangling reference.
 - Fixed Wave tools startup crash when compiled with VC8.
+- Added the name of the generating compiler (BOOST_COMPILER) to the full 
+  Wave version info.
 
 Sat Feb 18 2005
 - Version 1.2.3
